--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,13 @@
 
+
+h1{
+  color: blue;
+}
+
 .header {
   padding-top: 20px;
   padding-bottom: 20px;
+  background-color: blue;
 }
 
 .footer {
@@ -18,5 +24,5 @@
 
 .p a {
   text-decoration: underline;
-  color: blue;
+  color:green;
 }
