--- a/css/styles.css
+++ b/css/styles.css
@@ -38,3 +38,11 @@ h1{
   text-decoration: underline;
   color:green;
 }
+
+img {
+  width: 85%;
+  height: 180px;
+  border: 2px solid white;
+  box-shadow: 2px 2px 2px #999;
+  margin: 10px 10px 10px 25px;
+}
