--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,8 @@
 
-
-h1{
-  color: blue;
-}
-
-.ul {
-  color: lightblue;
-}
-
 .header {
   padding-top: 20px;
   padding-bottom: 20px;
-  background-color: blue;
+  background-color: green;
 }
 
 .navbar-header {
@@ -22,23 +13,22 @@ h1{
   border-top: 1px solid #444;
   padding-top: 20px;
   margin-top: 20px;
-  color: #999
+  background-color: blue;
 }
 
-.p {
+p {
   text-align: center;
-  padding-top: 120px;
 }
 
-.p a {
+p a {
   text-decoration: underline;
   color:green;
 }
 
 img {
-  width: 95%;
-  height: 180px;
-  border: 2px solid white;
+  float: left;
+  width: 312px;
+  height: 260px;
   box-shadow: 8px 2px 2px #999;
   margin: 10px 10px 10px 3px;
 }
