fix font and test text color

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,14 @@
 
 .footer {
   border-top: 1px solid #444;
-  padding-top: 20px;
-  margin-top: 20px;
-  background-color: blue;
+  padding-top: 2px;
+  margin-top: 2px;
+  background-color: lightblue;
 }
 
 p {
+  color: purple;
+  font-family: fantasy;
   text-align: center;
 }
 
